@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Jun 2015; Chymera <chymera@gentoo.org> ants-9999.ebuild:
+  using cmake eclass
+
 *ants-9999 (10 Mar 2015)
 
   10 Mar 2015;  <chymera@gentoo.org> +ants-9999.ebuild, +metadata.xml:
